parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON

Grammar

Rule 0     S' -> calc
Rule 1     calc -> expr
Rule 2     calc -> var_assign
Rule 3     calc -> func_assign
Rule 4     calc -> cout
Rule 5     calc -> empty
Rule 6     expr -> LPAREN expr PLUS expr RPAREN
Rule 7     expr -> LPAREN expr MINUS expr RPAREN
Rule 8     expr -> LPAREN expr MULTIPLY expr RPAREN
Rule 9     expr -> LPAREN expr DIVIDE expr RPAREN
Rule 10    expr -> LPAREN expr INTDIV expr RPAREN
Rule 11    expr -> LPAREN expr DBEQ expr RPAREN
Rule 12    expr -> LPAREN expr EXEQ expr RPAREN
Rule 13    expr -> LPAREN expr LT expr RPAREN
Rule 14    expr -> LPAREN expr GT expr RPAREN
Rule 15    expr -> LPAREN EX expr RPAREN
Rule 16    multi_calc -> multi_calc LINE calc
Rule 17    multi_calc -> calc
Rule 18    expr -> expr MULTIPLY expr
Rule 19    expr -> expr DIVIDE expr
Rule 20    expr -> expr INTDIV expr
Rule 21    expr -> expr PLUS expr
Rule 22    expr -> expr MINUS expr
Rule 23    expr -> expr DBEQ expr
Rule 24    expr -> expr EXEQ expr
Rule 25    expr -> expr LT expr
Rule 26    expr -> expr GT expr
Rule 27    expr -> EX expr
Rule 28    expr -> PLUS expr
Rule 29    expr -> MINUS expr
Rule 30    expr -> INT
Rule 31    expr -> FLOAT
Rule 32    multi_expr -> multi_expr COMMA expr
Rule 33    multi_expr -> expr
Rule 34    multi_expr -> empty
Rule 35    expr -> STRING
Rule 36    multi_id -> multi_id COMMA ID
Rule 37    multi_id -> ID
Rule 38    multi_id -> empty
Rule 39    calc -> IF LPAREN expr RPAREN LCURLY multi_calc ELSE multi_calc RCURLY
Rule 40    calc -> IF LPAREN expr RPAREN LCURLY multi_calc RCURLY
Rule 41    var_assign -> LET ID EQ expr
Rule 42    func_assign -> FUNC ID LPAREN multi_id RPAREN LCURLY multi_calc RCURLY
Rule 43    cout -> OUTPUT DBLT expr
Rule 44    expr -> INPUT
Rule 45    var_assign -> ID DBLT INPUT
Rule 46    calc -> ID LPAREN multi_expr RPAREN
Rule 47    expr -> ID
Rule 48    empty -> <empty>

Terminals, with rules where they appear

COLON                : 
COMMA                : 32 36
DBEQ                 : 11 23
DBLT                 : 43 45
DIVIDE               : 9 19
ELSE                 : 39
EQ                   : 41
EX                   : 15 27
EXEQ                 : 12 24
FLOAT                : 31
FUNC                 : 42
GT                   : 14 26
ID                   : 36 37 41 42 45 46 47
IF                   : 39 40
INPUT                : 44 45
INT                  : 30
INTDIV               : 10 20
LCURLY               : 39 40 42
LET                  : 41
LINE                 : 16
LPAREN               : 6 7 8 9 10 11 12 13 14 15 39 40 42 46
LT                   : 13 25
MINUS                : 7 22 29
MULTIPLY             : 8 18
OUTPUT               : 43
PLUS                 : 6 21 28
RCURLY               : 39 40 42
RPAREN               : 6 7 8 9 10 11 12 13 14 15 39 40 42 46
STRING               : 35
error                : 

Nonterminals, with rules where they appear

calc                 : 16 17 0
cout                 : 4
empty                : 5 34 38
expr                 : 1 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 28 29 32 33 39 40 41 43
func_assign          : 3
multi_calc           : 16 39 39 40 42
multi_expr           : 32 46
multi_id             : 36 42
var_assign           : 2

Parsing method: LALR

state 0

    (0) S' -> . calc
    (1) calc -> . expr
    (2) calc -> . var_assign
    (3) calc -> . func_assign
    (4) calc -> . cout
    (5) calc -> . empty
    (39) calc -> . IF LPAREN expr RPAREN LCURLY multi_calc ELSE multi_calc RCURLY
    (40) calc -> . IF LPAREN expr RPAREN LCURLY multi_calc RCURLY
    (46) calc -> . ID LPAREN multi_expr RPAREN
    (6) expr -> . LPAREN expr PLUS expr RPAREN
    (7) expr -> . LPAREN expr MINUS expr RPAREN
    (8) expr -> . LPAREN expr MULTIPLY expr RPAREN
    (9) expr -> . LPAREN expr DIVIDE expr RPAREN
    (10) expr -> . LPAREN expr INTDIV expr RPAREN
    (11) expr -> . LPAREN expr DBEQ expr RPAREN
    (12) expr -> . LPAREN expr EXEQ expr RPAREN
    (13) expr -> . LPAREN expr LT expr RPAREN
    (14) expr -> . LPAREN expr GT expr RPAREN
    (15) expr -> . LPAREN EX expr RPAREN
    (18) expr -> . expr MULTIPLY expr
    (19) expr -> . expr DIVIDE expr
    (20) expr -> . expr INTDIV expr
    (21) expr -> . expr PLUS expr
    (22) expr -> . expr MINUS expr
    (23) expr -> . expr DBEQ expr
    (24) expr -> . expr EXEQ expr
    (25) expr -> . expr LT expr
    (26) expr -> . expr GT expr
    (27) expr -> . EX expr
    (28) expr -> . PLUS expr
    (29) expr -> . MINUS expr
    (30) expr -> . INT
    (31) expr -> . FLOAT
    (35) expr -> . STRING
    (44) expr -> . INPUT
    (47) expr -> . ID
    (41) var_assign -> . LET ID EQ expr
    (45) var_assign -> . ID DBLT INPUT
    (42) func_assign -> . FUNC ID LPAREN multi_id RPAREN LCURLY multi_calc RCURLY
    (43) cout -> . OUTPUT DBLT expr
    (48) empty -> .

    IF              shift and go to state 7
    ID              shift and go to state 9
    LPAREN          shift and go to state 8
    EX              shift and go to state 12
    PLUS            shift and go to state 10
    MINUS           shift and go to state 11
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    STRING          shift and go to state 15
    INPUT           shift and go to state 16
    LET             shift and go to state 17
    FUNC            shift and go to state 18
    OUTPUT          shift and go to state 19
    $end            reduce using rule 48 (empty -> .)

    calc                           shift and go to state 1
    expr                           shift and go to state 2
    var_assign                     shift and go to state 3
    func_assign                    shift and go to state 4
    cout                           shift and go to state 5
    empty                          shift and go to state 6

state 1

    (0) S' -> calc .



state 2

    (1) calc -> expr .
    (18) expr -> expr . MULTIPLY expr
    (19) expr -> expr . DIVIDE expr
    (20) expr -> expr . INTDIV expr
    (21) expr -> expr . PLUS expr
    (22) expr -> expr . MINUS expr
    (23) expr -> expr . DBEQ expr
    (24) expr -> expr . EXEQ expr
    (25) expr -> expr . LT expr
    (26) expr -> expr . GT expr

    $end            reduce using rule 1 (calc -> expr .)
    ELSE            reduce using rule 1 (calc -> expr .)
    RCURLY          reduce using rule 1 (calc -> expr .)
    LINE            reduce using rule 1 (calc -> expr .)
    MULTIPLY        shift and go to state 20
    DIVIDE          shift and go to state 21
    INTDIV          shift and go to state 22
    PLUS            shift and go to state 23
    MINUS           shift and go to state 24
    DBEQ            shift and go to state 25
    EXEQ            shift and go to state 26
    LT              shift and go to state 27
    GT              shift and go to state 28


state 3

    (2) calc -> var_assign .

    $end            reduce using rule 2 (calc -> var_assign .)
    ELSE            reduce using rule 2 (calc -> var_assign .)
    RCURLY          reduce using rule 2 (calc -> var_assign .)
    LINE            reduce using rule 2 (calc -> var_assign .)


state 4

    (3) calc -> func_assign .

    $end            reduce using rule 3 (calc -> func_assign .)
    ELSE            reduce using rule 3 (calc -> func_assign .)
    RCURLY          reduce using rule 3 (calc -> func_assign .)
    LINE            reduce using rule 3 (calc -> func_assign .)


state 5

    (4) calc -> cout .

    $end            reduce using rule 4 (calc -> cout .)
    ELSE            reduce using rule 4 (calc -> cout .)
    RCURLY          reduce using rule 4 (calc -> cout .)
    LINE            reduce using rule 4 (calc -> cout .)


state 6

    (5) calc -> empty .

    $end            reduce using rule 5 (calc -> empty .)
    ELSE            reduce using rule 5 (calc -> empty .)
    RCURLY          reduce using rule 5 (calc -> empty .)
    LINE            reduce using rule 5 (calc -> empty .)


state 7

    (39) calc -> IF . LPAREN expr RPAREN LCURLY multi_calc ELSE multi_calc RCURLY
    (40) calc -> IF . LPAREN expr RPAREN LCURLY multi_calc RCURLY

    LPAREN          shift and go to state 29


state 8

    (6) expr -> LPAREN . expr PLUS expr RPAREN
    (7) expr -> LPAREN . expr MINUS expr RPAREN
    (8) expr -> LPAREN . expr MULTIPLY expr RPAREN
    (9) expr -> LPAREN . expr DIVIDE expr RPAREN
    (10) expr -> LPAREN . expr INTDIV expr RPAREN
    (11) expr -> LPAREN . expr DBEQ expr RPAREN
    (12) expr -> LPAREN . expr EXEQ expr RPAREN
    (13) expr -> LPAREN . expr LT expr RPAREN
    (14) expr -> LPAREN . expr GT expr RPAREN
    (15) expr -> LPAREN . EX expr RPAREN
    (6) expr -> . LPAREN expr PLUS expr RPAREN
    (7) expr -> . LPAREN expr MINUS expr RPAREN
    (8) expr -> . LPAREN expr MULTIPLY expr RPAREN
    (9) expr -> . LPAREN expr DIVIDE expr RPAREN
    (10) expr -> . LPAREN expr INTDIV expr RPAREN
    (11) expr -> . LPAREN expr DBEQ expr RPAREN
    (12) expr -> . LPAREN expr EXEQ expr RPAREN
    (13) expr -> . LPAREN expr LT expr RPAREN
    (14) expr -> . LPAREN expr GT expr RPAREN
    (15) expr -> . LPAREN EX expr RPAREN
    (18) expr -> . expr MULTIPLY expr
    (19) expr -> . expr DIVIDE expr
    (20) expr -> . expr INTDIV expr
    (21) expr -> . expr PLUS expr
    (22) expr -> . expr MINUS expr
    (23) expr -> . expr DBEQ expr
    (24) expr -> . expr EXEQ expr
    (25) expr -> . expr LT expr
    (26) expr -> . expr GT expr
    (27) expr -> . EX expr
    (28) expr -> . PLUS expr
    (29) expr -> . MINUS expr
    (30) expr -> . INT
    (31) expr -> . FLOAT
    (35) expr -> . STRING
    (44) expr -> . INPUT
    (47) expr -> . ID

    EX              shift and go to state 31
    LPAREN          shift and go to state 8
    PLUS            shift and go to state 10
    MINUS           shift and go to state 11
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    STRING          shift and go to state 15
    INPUT           shift and go to state 16
    ID              shift and go to state 32

    expr                           shift and go to state 30

state 9

    (46) calc -> ID . LPAREN multi_expr RPAREN
    (47) expr -> ID .
    (45) var_assign -> ID . DBLT INPUT

    LPAREN          shift and go to state 33
    MULTIPLY        reduce using rule 47 (expr -> ID .)
    DIVIDE          reduce using rule 47 (expr -> ID .)
    INTDIV          reduce using rule 47 (expr -> ID .)
    PLUS            reduce using rule 47 (expr -> ID .)
    MINUS           reduce using rule 47 (expr -> ID .)
    DBEQ            reduce using rule 47 (expr -> ID .)
    EXEQ            reduce using rule 47 (expr -> ID .)
    LT              reduce using rule 47 (expr -> ID .)
    GT              reduce using rule 47 (expr -> ID .)
    $end            reduce using rule 47 (expr -> ID .)
    ELSE            reduce using rule 47 (expr -> ID .)
    RCURLY          reduce using rule 47 (expr -> ID .)
    LINE            reduce using rule 47 (expr -> ID .)
    DBLT            shift and go to state 34


state 10

    (28) expr -> PLUS . expr
    (6) expr -> . LPAREN expr PLUS expr RPAREN
    (7) expr -> . LPAREN expr MINUS expr RPAREN
    (8) expr -> . LPAREN expr MULTIPLY expr RPAREN
    (9) expr -> . LPAREN expr DIVIDE expr RPAREN
    (10) expr -> . LPAREN expr INTDIV expr RPAREN
    (11) expr -> . LPAREN expr DBEQ expr RPAREN
    (12) expr -> . LPAREN expr EXEQ expr RPAREN
    (13) expr -> . LPAREN expr LT expr RPAREN
    (14) expr -> . LPAREN expr GT expr RPAREN
    (15) expr -> . LPAREN EX expr RPAREN
    (18) expr -> . expr MULTIPLY expr
    (19) expr -> . expr DIVIDE expr
    (20) expr -> . expr INTDIV expr
    (21) expr -> . expr PLUS expr
    (22) expr -> . expr MINUS expr
    (23) expr -> . expr DBEQ expr
    (24) expr -> . expr EXEQ expr
    (25) expr -> . expr LT expr
    (26) expr -> . expr GT expr
    (27) expr -> . EX expr
    (28) expr -> . PLUS expr
    (29) expr -> . MINUS expr
    (30) expr -> . INT
    (31) expr -> . FLOAT
    (35) expr -> . STRING
    (44) expr -> . INPUT
    (47) expr -> . ID

    LPAREN          shift and go to state 8
    EX              shift and go to state 12
    PLUS            shift and go to state 10
    MINUS           shift and go to state 11
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    STRING          shift and go to state 15
    INPUT           shift and go to state 16
    ID              shift and go to state 32

    expr                           shift and go to state 35

state 11

    (29) expr -> MINUS . expr
    (6) expr -> . LPAREN expr PLUS expr RPAREN
    (7) expr -> . LPAREN expr MINUS expr RPAREN
    (8) expr -> . LPAREN expr MULTIPLY expr RPAREN
    (9) expr -> . LPAREN expr DIVIDE expr RPAREN
    (10) expr -> . LPAREN expr INTDIV expr RPAREN
    (11) expr -> . LPAREN expr DBEQ expr RPAREN
    (12) expr -> . LPAREN expr EXEQ expr RPAREN
    (13) expr -> . LPAREN expr LT expr RPAREN
    (14) expr -> . LPAREN expr GT expr RPAREN
    (15) expr -> . LPAREN EX expr RPAREN
    (18) expr -> . expr MULTIPLY expr
    (19) expr -> . expr DIVIDE expr
    (20) expr -> . expr INTDIV expr
    (21) expr -> . expr PLUS expr
    (22) expr -> . expr MINUS expr
    (23) expr -> . expr DBEQ expr
    (24) expr -> . expr EXEQ expr
    (25) expr -> . expr LT expr
    (26) expr -> . expr GT expr
    (27) expr -> . EX expr
    (28) expr -> . PLUS expr
    (29) expr -> . MINUS expr
    (30) expr -> . INT
    (31) expr -> . FLOAT
    (35) expr -> . STRING
    (44) expr -> . INPUT
    (47) expr -> . ID

    LPAREN          shift and go to state 8
    EX              shift and go to state 12
    PLUS            shift and go to state 10
    MINUS           shift and go to state 11
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    STRING          shift and go to state 15
    INPUT           shift and go to state 16
    ID              shift and go to state 32

    expr                           shift and go to state 36

state 12

    (27) expr -> EX . expr
    (6) expr -> . LPAREN expr PLUS expr RPAREN
    (7) expr -> . LPAREN expr MINUS expr RPAREN
    (8) expr -> . LPAREN expr MULTIPLY expr RPAREN
    (9) expr -> . LPAREN expr DIVIDE expr RPAREN
    (10) expr -> . LPAREN expr INTDIV expr RPAREN
    (11) expr -> . LPAREN expr DBEQ expr RPAREN
    (12) expr -> . LPAREN expr EXEQ expr RPAREN
    (13) expr -> . LPAREN expr LT expr RPAREN
    (14) expr -> . LPAREN expr GT expr RPAREN
    (15) expr -> . LPAREN EX expr RPAREN
    (18) expr -> . expr MULTIPLY expr
    (19) expr -> . expr DIVIDE expr
    (20) expr -> . expr INTDIV expr
    (21) expr -> . expr PLUS expr
    (22) expr -> . expr MINUS expr
    (23) expr -> . expr DBEQ expr
    (24) expr -> . expr EXEQ expr
    (25) expr -> . expr LT expr
    (26) expr -> . expr GT expr
    (27) expr -> . EX expr
    (28) expr -> . PLUS expr
    (29) expr -> . MINUS expr
    (30) expr -> . INT
    (31) expr -> . FLOAT
    (35) expr -> . STRING
    (44) expr -> . INPUT
    (47) expr -> . ID

    LPAREN          shift and go to state 8
    EX              shift and go to state 12
    PLUS            shift and go to state 10
    MINUS           shift and go to state 11
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    STRING          shift and go to state 15
    INPUT           shift and go to state 16
    ID              shift and go to state 32

    expr                           shift and go to state 37

state 13

    (30) expr -> INT .

    MULTIPLY        reduce using rule 30 (expr -> INT .)
    DIVIDE          reduce using rule 30 (expr -> INT .)
    INTDIV          reduce using rule 30 (expr -> INT .)
    PLUS            reduce using rule 30 (expr -> INT .)
    MINUS           reduce using rule 30 (expr -> INT .)
    DBEQ            reduce using rule 30 (expr -> INT .)
    EXEQ            reduce using rule 30 (expr -> INT .)
    LT              reduce using rule 30 (expr -> INT .)
    GT              reduce using rule 30 (expr -> INT .)
    $end            reduce using rule 30 (expr -> INT .)
    RPAREN          reduce using rule 30 (expr -> INT .)
    COMMA           reduce using rule 30 (expr -> INT .)
    ELSE            reduce using rule 30 (expr -> INT .)
    RCURLY          reduce using rule 30 (expr -> INT .)
    LINE            reduce using rule 30 (expr -> INT .)


state 14

    (31) expr -> FLOAT .

    MULTIPLY        reduce using rule 31 (expr -> FLOAT .)
    DIVIDE          reduce using rule 31 (expr -> FLOAT .)
    INTDIV          reduce using rule 31 (expr -> FLOAT .)
    PLUS            reduce using rule 31 (expr -> FLOAT .)
    MINUS           reduce using rule 31 (expr -> FLOAT .)
    DBEQ            reduce using rule 31 (expr -> FLOAT .)
    EXEQ            reduce using rule 31 (expr -> FLOAT .)
    LT              reduce using rule 31 (expr -> FLOAT .)
    GT              reduce using rule 31 (expr -> FLOAT .)
    $end            reduce using rule 31 (expr -> FLOAT .)
    RPAREN          reduce using rule 31 (expr -> FLOAT .)
    COMMA           reduce using rule 31 (expr -> FLOAT .)
    ELSE            reduce using rule 31 (expr -> FLOAT .)
    RCURLY          reduce using rule 31 (expr -> FLOAT .)
    LINE            reduce using rule 31 (expr -> FLOAT .)


state 15

    (35) expr -> STRING .

    MULTIPLY        reduce using rule 35 (expr -> STRING .)
    DIVIDE          reduce using rule 35 (expr -> STRING .)
    INTDIV          reduce using rule 35 (expr -> STRING .)
    PLUS            reduce using rule 35 (expr -> STRING .)
    MINUS           reduce using rule 35 (expr -> STRING .)
    DBEQ            reduce using rule 35 (expr -> STRING .)
    EXEQ            reduce using rule 35 (expr -> STRING .)
    LT              reduce using rule 35 (expr -> STRING .)
    GT              reduce using rule 35 (expr -> STRING .)
    $end            reduce using rule 35 (expr -> STRING .)
    RPAREN          reduce using rule 35 (expr -> STRING .)
    COMMA           reduce using rule 35 (expr -> STRING .)
    ELSE            reduce using rule 35 (expr -> STRING .)
    RCURLY          reduce using rule 35 (expr -> STRING .)
    LINE            reduce using rule 35 (expr -> STRING .)


state 16

    (44) expr -> INPUT .

    MULTIPLY        reduce using rule 44 (expr -> INPUT .)
    DIVIDE          reduce using rule 44 (expr -> INPUT .)
    INTDIV          reduce using rule 44 (expr -> INPUT .)
    PLUS            reduce using rule 44 (expr -> INPUT .)
    MINUS           reduce using rule 44 (expr -> INPUT .)
    DBEQ            reduce using rule 44 (expr -> INPUT .)
    EXEQ            reduce using rule 44 (expr -> INPUT .)
    LT              reduce using rule 44 (expr -> INPUT .)
    GT              reduce using rule 44 (expr -> INPUT .)
    $end            reduce using rule 44 (expr -> INPUT .)
    RPAREN          reduce using rule 44 (expr -> INPUT .)
    COMMA           reduce using rule 44 (expr -> INPUT .)
    ELSE            reduce using rule 44 (expr -> INPUT .)
    RCURLY          reduce using rule 44 (expr -> INPUT .)
    LINE            reduce using rule 44 (expr -> INPUT .)


state 17

    (41) var_assign -> LET . ID EQ expr

    ID              shift and go to state 38


state 18

    (42) func_assign -> FUNC . ID LPAREN multi_id RPAREN LCURLY multi_calc RCURLY

    ID              shift and go to state 39


state 19

    (43) cout -> OUTPUT . DBLT expr

    DBLT            shift and go to state 40


state 20

    (18) expr -> expr MULTIPLY . expr
    (6) expr -> . LPAREN expr PLUS expr RPAREN
    (7) expr -> . LPAREN expr MINUS expr RPAREN
    (8) expr -> . LPAREN expr MULTIPLY expr RPAREN
    (9) expr -> . LPAREN expr DIVIDE expr RPAREN
    (10) expr -> . LPAREN expr INTDIV expr RPAREN
    (11) expr -> . LPAREN expr DBEQ expr RPAREN
    (12) expr -> . LPAREN expr EXEQ expr RPAREN
    (13) expr -> . LPAREN expr LT expr RPAREN
    (14) expr -> . LPAREN expr GT expr RPAREN
    (15) expr -> . LPAREN EX expr RPAREN
    (18) expr -> . expr MULTIPLY expr
    (19) expr -> . expr DIVIDE expr
    (20) expr -> . expr INTDIV expr
    (21) expr -> . expr PLUS expr
    (22) expr -> . expr MINUS expr
    (23) expr -> . expr DBEQ expr
    (24) expr -> . expr EXEQ expr
    (25) expr -> . expr LT expr
    (26) expr -> . expr GT expr
    (27) expr -> . EX expr
    (28) expr -> . PLUS expr
    (29) expr -> . MINUS expr
    (30) expr -> . INT
    (31) expr -> . FLOAT
    (35) expr -> . STRING
    (44) expr -> . INPUT
    (47) expr -> . ID
